mType/tests/testFiles/error/error/invalidClassNameSpecialChar.mt
class My@Class {
    int x;
}
